@@ -6,11 +6,13 @@ by Alex Rabe & NextGEN DEV Team
 * TODO : Facebook connector
 * TODO : Switch to Plupload (http://www.plupload.com/)
 * NEW : Publish a new post direct from the gallery admin page
+* NEW : Added filter hook 'ngg_get_image_metadata' to add more exif/iptc information
 * Changed : New hooks for gallery table (THX to Alexander Schneider)
 * Changed : Introduce jQuery dialog as new UI element
 * Bugfix : Install/Upgrade failed when table prefix contain captial letters
 * Bugfix : Fix validation issues in Media-RSS
 * Bugifx : Empty tags in XMP Meta causes PHP error
+* Bugifx : Disable cache for slideshow
 
 = V1.6.2 - 19.09.2010 =
 * NEW : Added constant NGG_SKIP_LOAD_SCRIPTS to avoid script load
